--- a/package.json
+++ b/package.json
@@ -1,55 +1,42 @@
-{
-  "name": "acdpub",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.11.0",
-    "@mui/lab": "^5.0.0-alpha.119",
-    "@mui/material": "^5.11.8",
-    "@mui/styled-engine-sc": "^5.11.0",
-    "@mui/x-data-grid": "^5.17.23",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "cdn": "^1.1.1",
-    "console-browserify": "^1.2.0",
-    "ipfs-http-client": "^60.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "react-scripts": "5.0.1",
-    "styled-components": "^5.3.6",
-    "truffle-contract": "^4.0.31",
-    "web-vitals": "^2.1.4",
-    "web3": "^1.8.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "source-map-loader": "^4.0.1"
+
+  {
+    "name": "eth4all_-_figma",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+			"@testing-library/jest-dom": "^5.16.1",
+			"@testing-library/react": "^13.3.0",
+			"@testing-library/user-event": "^13.5.0",
+			"@types/jest": "^27.0.3",
+			"@types/node": "^16.11.14",
+			"@types/react": "^18.0.17",
+			"@types/react-dom": "^18.0.6",
+			"react": "^18.2.0",
+			"react-dom": "^18.2.0",
+			"react-scripts": "5.0.1",
+			"web-vitals": "^2.1.2",
+			"react-router-dom": "^6.2.1"
+    },
+    "scripts": {
+      "start": "react-scripts start",
+      "build": "react-scripts build",
+      "test": "react-scripts test",
+      "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+
+    },
+    "browserslist": {
+      "production": [
+        ">0.2%",
+        "not dead",
+        "not op_mini all"
+      ],
+      "development": [
+        "last 1 chrome version",
+        "last 1 firefox version",
+        "last 1 safari version"
+      ]
+    }
   }
-}
+  
