--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cdn": "^1.1.1",
     "console-browserify": "^1.2.0",
     "ipfs-http-client": "^60.0.0",
+    "mime": "^3.0.0",
     "nft.storage": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
